clpset module, pairing, some hampath work

--- a/cool-relations-faster-minikanren.html
+++ b/cool-relations-faster-minikanren.html
@@ -13,11 +13,29 @@ img {
 </style>
 
 <h1>
-Advanced relations computable by
+Cool relations for
 <a href="https://github.com/michaelballantyne/faster-minikanren">
 faster-minikanren
 </a>
 </h1>
+
+<p>
+See also:
+
+<ul>
+  <li>
+    <a href="cool-relations.html">
+      cool-relations.html
+    </a>
+  </li>
+
+  <li>
+    <a href="cool-relations-clpset.html">
+      cool-relations-clpset.html
+    </a>
+  </li>
+</ul>
+</p>
 
 <h2>1-in-3SAT</h2>
 <p>
